src/test/deca/codegen/valid/improvided/testClass20.deca
 //Description:
//   test de class, cast

// Resultat:
// 
class A{}

class B extends A {}

{

   B b = new B();

   A a = (A) (b);

}
