src/test/deca/codegen/invalid/improvided/cast.deca

class A {
}
class B extends A {
}

{
	A a = new A();
	B b = (B) (a);
}

